<resources>
    <string name="app_name">Pay App Model</string>
    <string name="text_mamo_pay">Mamo Pay</string>
    <string name="continue_google">Continue with Google</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="balance_text">Mamo Pay balance</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="mamo_pay_balance">Mamo Pay balance</string>
    <string name="transport">Transport</string>
    <string name="food">Food</string>
    <string name="school">School</string>
    <string name="family">Family</string>
    <string-array name="welcome_text">
        <item>"Connect your bank account"</item>
        <item>"Send money instantly"</item>
        <item>"No fees, No IBANs, No Cash"</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_text">Please add money to your wallet</string>
    <string name="confirm_transfer">Confirm transfer</string>
    <string name="send_money_to">Send money to</string>
    <string name="user_name">Steve Pickles</string>
    <string name="phone_number">+971123456789</string>
    <string name="phone_number_text">Phone number</string>
    <string name="amount_credited">Amount credited</string>
    <string name="disclaimer_text">The money will credited to the user account within 3 days from the date of the transfer.</string>
    <string name="disclaimer_success_text">Money will be credited to the account within 12 hours. If it doesn\'t happen, contact support.</string>
    <string name="channel_name">Mamo Pay Channel</string>
    <string name="channel_description">Mamo Pay Push Notification</string>
    <string name="snooze">Snooze</string>
</resources>
