<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mamo_pay_balance"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/balance_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_header"
            android:layout_marginTop="10dp"
            android:text="AED 442442"
            android:textColor="@color/text_color_grey"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="80sp"
            android:layout_marginBottom="40dp"
            android:background="@android:color/transparent"
            android:hint="0"
            android:inputType="number"
            android:maxLength="9"
            android:textColor="@color/text_color_grey"
            android:textColorHint="@color/hint_color"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/options"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_text"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/options"
            app:layout_constraintTop_toBottomOf="@+id/transaction_amount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="AED"
            android:textColor="@color/hint_color"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/transaction_amount"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/transaction_amount" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:chipSpacing='10dp'
            app:layout_constraintBottom_toTopOf="@+id/next_btn"
            app:singleLine='true'
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:minWidth="80dp"
                android:text="@string/family"
                android:textAlignment="center"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_color"
                app:chipMinHeight="40dp"
                app:chipStrokeColor="@color/hint_color"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:minWidth="80dp"
                android:text="@string/school"
                android:textAlignment="center"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_color"
                app:chipMinHeight="40dp"
                app:chipStrokeColor="@color/hint_color"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:minWidth="80dp"
                android:text="@string/food"
                android:textAlignment="center"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_color"
                app:chipMinHeight="40dp"
                app:chipStrokeColor="@color/hint_color"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:minWidth="80dp"
                android:text="@string/transport"
                android:textAlignment="center"
                android:textColor="@color/chip_text_color"
                app:chipBackgroundColor="@color/chip_color"
                app:chipMinHeight="40dp"
                app:chipStrokeColor="@color/hint_color"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/material_button_color"
            android:enabled="false"
            android:padding="18dp"
            android:text="Next"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>